# spark

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.wheel  MANIFEST.in  README-package.md  README.md  TODO.md  attractor-implementation-checklist.md  attractor.state.json  build_backend.py  chat-mode-collaboration-propagation-plan.md  compose.package.yaml  compose.yaml  context-compaction-visibility-plan.md  fix-thread-sidebar-expansion-on-container-resize.md  implementation-plan.md  index.html  justfile  move-codex-runtime.md  pyproject.toml  requirements.txt  run-attractor-loop.sh  run-reporting-redesign.md  run-sparkspawn-loop.sh  server.py  set-global-settings-default-model-to-gpt-5-4.md  sparkspawn-attractor-extensions.md  ui-gaps.md  ui-implementation-checklist.md  ui-parity-risk-report.md  ui-spec-first-behavior-map.md  ui-spec.md  ui-user-stories.md
apps/spark-desktop/: Cargo.toml  SMOKE.md  tauri.conf.json
apps/spark-desktop/capabilities/: default.json
apps/spark-desktop/src/: desktop_core.rs  lib.rs  main.rs
apps/spark-desktop/tests/: desktop_contracts.rs
crates/attractor-api/: Cargo.toml
crates/attractor-api/src/: lib.rs
crates/attractor-api/tests/: contracts.rs  execution_placement_contracts.rs  flow_crud_contracts.rs  llm_profiles_contracts.rs  pipeline_control_contracts.rs  pipeline_inspection_contracts.rs  pipeline_lifecycle_contracts.rs  preview_route_contracts.rs  runtime_control_service_contracts.rs  status_route_contracts.rs
crates/attractor-core/: Cargo.toml
crates/attractor-core/examples/: generate-flow-schema.rs
crates/attractor-core/src/: conditions.rs  context.rs  context_contracts.rs  error.rs  flow_definition.rs  graph.rs  lib.rs  outcomes.rs  routing.rs  runtime.rs
crates/attractor-core/tests/: contracts.rs  core_contracts.rs
crates/attractor-dsl/: Cargo.toml
crates/attractor-dsl/src/: error.rs  flow_sources.rs  formatter.rs  lexer.rs  lib.rs  parser.rs  preview.rs  transforms.rs  validation.rs
crates/attractor-dsl/tests/: formatter_contracts.rs  parser_contracts.rs  preview_contracts.rs  transform_contracts.rs  validation_contracts.rs
crates/attractor-execution/: Cargo.toml
crates/attractor-execution/src/: container.rs  context.rs  errors.rs  lib.rs  metadata.rs  modes.rs  profile.rs  protocol.rs  settings_view.rs  worker.rs
crates/attractor-execution/tests/: container_contracts.rs  contracts.rs  profile_contracts.rs  worker_protocol_contracts.rs
crates/attractor-runtime/: Cargo.toml
crates/attractor-runtime/src/: artifacts.rs  checkpoints.rs  codergen.rs  context.rs  controls.rs  error.rs  events.rs  executor.rs  flow_runtime.rs  handlers.rs  journal_cache.rs  journals.rs  lib.rs  manager_loop.rs  paths.rs  records.rs  results.rs  retry.rs  routing.rs  segments.rs  store.rs  terminal.rs  transcript.rs  usage.rs
crates/attractor-runtime/tests/: checkpoint_recovery_controls_contracts.rs  codergen_runtime_contracts.rs  context_routing_contracts.rs  contracts.rs  core_handler_contracts.rs  detached_execution_contracts.rs  execution_profile_runtime_contracts.rs  executor_retry_terminal_contracts.rs  flow_definition_typed_runtime_contracts.rs  human_gate_blocking_contracts.rs  journal_projection_contracts.rs  process_contracts.rs  segment_projection_contracts.rs  storage_contracts.rs  transcript_contracts.rs  usage_contracts.rs
crates/spark-agent-adapter/: Cargo.toml
crates/spark-agent-adapter/src/: agent.rs  apply_patch.rs  boundary_cli.rs  claude_code.rs  codergen.rs  codex_app_server.rs  config.rs  context.rs  environment.rs  events.rs  history.rs  initial_context.rs  lib.rs  llm_backend.rs  local_environment.rs  project_docs.rs  session.rs  status_envelope.rs  subagents.rs  truncation.rs
crates/spark-agent-adapter/tests/: agent_event_contracts.rs  codergen_contracts.rs  codex_app_server_contracts.rs  contracts.rs  llm_backend_contracts.rs  local_environment_contracts.rs  process_contracts.rs  prompt_context_contracts.rs  provider_profile_contracts.rs  runtime_contracts.rs  tool_dispatch_contracts.rs
crates/spark-cli/: Cargo.toml
crates/spark-cli/src/: lib.rs  main.rs  output.rs
crates/spark-cli/tests/: cli_process_contracts.rs  cli_shell_contracts.rs  process_contracts.rs  trigger_cli_m4_route_contracts.rs
crates/spark-common/: Cargo.toml
crates/spark-common/src/: debug.rs  error.rs  events.rs  lib.rs  logging.rs  paths.rs  process.rs  project.rs  segments.rs  settings.rs  software_development.rs  source_checkout.rs
crates/spark-common/tests/: common_contracts.rs  contracts.rs
crates/spark-http/: Cargo.toml
crates/spark-http/src/: lib.rs  workspace.rs
crates/spark-http/tests/: contracts.rs  deprecated_route_error_contracts.rs  process_contracts.rs  product_shell_contracts.rs  workspace_conversation_route_contracts.rs  workspace_conversation_turn_route_contracts.rs  workspace_flow_route_contracts.rs  workspace_live_sse_contracts.rs  workspace_review_route_contracts.rs  workspace_route_contracts.rs  workspace_run_route_contracts.rs  workspace_trigger_route_contracts.rs
crates/spark-server/: Cargo.toml
crates/spark-server/src/: lib.rs  main.rs
crates/spark-server/tests/: process_contracts.rs  server_product_shell_process.rs  server_service_process_contracts.rs  server_shell_contracts.rs
crates/spark-storage/: Cargo.toml
crates/spark-storage/src/: atomic.rs  codecs.rs  error.rs  lib.rs  repository.rs  unknown_fields.rs  workspace_conversations.rs  workspace_flow_catalog.rs  workspace_projects.rs  workspace_triggers.rs
crates/spark-storage/tests/: contracts.rs  conversation_commit_contracts.rs  conversation_migration_contracts.rs  conversation_runtime_session_contracts.rs  storage_contracts.rs  workspace_conversation_contracts.rs  workspace_flow_catalog_contracts.rs  workspace_project_contracts.rs  workspace_trigger_contracts.rs
crates/spark-triggers/: Cargo.toml
crates/spark-workspace/: Cargo.toml
crates/unified-llm-adapter/: Cargo.toml
test-app/: .gitignore  README.md  attractor.state.json  pyproject.toml
test-app/.interface-design/: system.md
(+1481 files in other folders)
