[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark"
version = "0.1.0"
description = "Workspace workbench for AI-assisted software delivery"
readme = "README-package.md"
requires-python = ">=3.11"
keywords = ["agents", "automation", "fastapi", "workflows", "dot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "fastapi>=0.111,<1.0",
    "httpx>=0.27,<1.0",
    "jsonschema>=4.0,<5.0",
    "platformdirs>=4.0",
    "pydantic>=2.7,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
spark = "spark.cli:main"
spark-server = "spark.server_cli:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent*", "attractor*", "spark*", "spark_common*", "unified_llm*"]

[tool.setuptools.package-data]
spark = ["flows/*.dot", "flows/*/*.dot", "flows/*/*/*.dot", "guides/*.md", "ui_dist/**"]
unified_llm = ["data/*.json"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: optional live smoke tests that hit provider APIs and require --run-live or -m live",
    "live_smoke: optional live-provider smoke coverage that runs only when explicitly selected",
]
