[project]
name = "test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chris", email = "christopher.l.charland@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "aiomysql>=0.2",
    "fastapi>=0.128.8",
    "sqlalchemy>=2.0",
    "uvicorn>=0.31",
]

[project.scripts]
test-app = "test_app:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
