[package]
name = "spark-desktop"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[lib]
name = "spark_desktop"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spark-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spark-agent-adapter = { path = "../../crates/spark-agent-adapter" }
spark-common = { path = "../../crates/spark-common" }
spark-http = { path = "../../crates/spark-http" }
spark-server = { path = "../../crates/spark-server" }
tauri = { version = "2" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
spark-storage = { path = "../../crates/spark-storage" }
tempfile = "3.10"
