[package]
name = "attractor-api"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
attractor-core = { path = "../attractor-core" }
attractor-dsl = { path = "../attractor-dsl" }
attractor-execution = { path = "../attractor-execution" }
attractor-runtime = { path = "../attractor-runtime" }
spark-common = { path = "../spark-common" }
unified-llm-adapter = { path = "../unified-llm-adapter" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
