[package]
name = "attractor-execution"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
attractor-core = { path = "../attractor-core" }
attractor-runtime = { path = "../attractor-runtime" }
spark-common = { path = "../spark-common" }
spark-storage = { path = "../spark-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
attractor-dsl = { path = "../attractor-dsl" }
tempfile = "3.10"
