[package]
name = "attractor-runtime"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
attractor-core = { path = "../attractor-core" }
attractor-dsl = { path = "../attractor-dsl" }
spark-agent-adapter = { path = "../spark-agent-adapter" }
spark-common = { path = "../spark-common" }
spark-storage = { path = "../spark-storage" }
unified-llm-adapter = { path = "../unified-llm-adapter" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
rand = "0.8"
glob = "0.3"

[dev-dependencies]
tempfile = "3.10"
