[package]
name = "spark-cli"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "spark"
path = "src/main.rs"

[dependencies]
attractor-dsl = { path = "../attractor-dsl" }
clap = { version = "4.5", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
spark-common = { path = "../spark-common" }
tracing = "0.1"

[dev-dependencies]
axum = "0.8"
spark-http = { path = "../spark-http" }
spark-storage = { path = "../spark-storage" }
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
