[package]
name = "spark-http"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
async-stream = "0.3"
attractor-api = { path = "../attractor-api" }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spark-assets = { path = "../spark-assets" }
spark-common = { path = "../spark-common" }
spark-storage = { path = "../spark-storage" }
spark-workspace = { path = "../spark-workspace" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
attractor-core = { path = "../attractor-core" }
attractor-runtime = { path = "../attractor-runtime" }
spark-agent-adapter = { path = "../spark-agent-adapter" }
futures-util = "0.3"
tempfile = "3.10"
