[package]
name = "spark-server"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "spark-server"
path = "src/main.rs"

[dependencies]
attractor-execution = { path = "../attractor-execution" }
attractor-runtime = { path = "../attractor-runtime" }
axum = "0.8"
serde_json = "1.0"
spark-assets = { path = "../spark-assets" }
spark-common = { path = "../spark-common" }
spark-http = { path = "../spark-http" }
spark-storage = { path = "../spark-storage" }
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
tracing = "0.1"
unified-llm-adapter = { path = "../unified-llm-adapter" }

[dev-dependencies]
tempfile = "3.10"
