[package]
name = "spark-storage"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
attractor-dsl = { path = "../attractor-dsl" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spark-common = { path = "../spark-common" }
tempfile = "3.10"
thiserror = "1.0"
time = "0.3"
toml = "0.8"
