[package]
name = "spark-workspace"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
attractor-core = { path = "../attractor-core" }
attractor-api = { path = "../attractor-api" }
attractor-dsl = { path = "../attractor-dsl" }
attractor-runtime = { path = "../attractor-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spark-agent-adapter = { path = "../spark-agent-adapter" }
spark-common = { path = "../spark-common" }
spark-storage = { path = "../spark-storage" }
spark-triggers = { path = "../spark-triggers" }
thiserror = "1.0"
time = "0.3"
unified-llm-adapter = { path = "../unified-llm-adapter" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
