[package]
name = "unified-llm-adapter"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
futures-core = "0.3"
jsonschema = { version = "0.46", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spark-assets = { path = "../spark-assets" }
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
